--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 mjlib is released under MIT
 
+mjlib is library independent javascript library. 
+Current features include:
+- Core: fast class and events manipulation engine.
+- PopupMenu
+- more features/widgets soon...
+
 Copyright (c) 2011 Michał Jezierski
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
