--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Current features:
 
 mjlib is released under MIT license
 
-Copyright (c) 2011 Michał Jezierski
+Copyright (c) 2011 Michał Jezierski [ambinanitelo (at) g m a i l (dot) c o m]
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
