--- a/README
+++ b/README
@@ -3,7 +3,7 @@ mjlib is pure javascript library.
 Current features:
 - Core: fast class and events manipulation engine.
 - PopupMenu
-- more features/widgets soon...
+- more features/widgets coming soon...
 
 mjlib is released under MIT license
 
