Edited README via GitHub

--- a/README
+++ b/README
@@ -3,9 +3,9 @@ mjlib is pure javascript library.
 Current features:
 - Core: fast class and events manipulation engine.
 - PopupMenu
+- Dialog windows
+- support for movable elements
 - more features/widgets coming soon...
-
-mjlib is released under MIT license
 
 Copyright (c) 2011 Michał Jezierski [ambinanitelo (at) g m a i l (dot) c o m]
 
